<resources>
    <string name="app_name">HabitTrainer</string>
    <string name="habit_icon">Habit icon</string>
    <string name="drink_water">Drink water</string>
    <string name="drink_water_description">A refreshing glass of water gets you hydrated</string>
    <string name="begin_new_habit">Begin new habit…</string>
    <string name="eat_apple">Eat an apple</string>
    <string name="an_apple_a_day_keeps_the_doctor_away">An apple a day keeps the doctor away</string>
    <string name="choose_image">Choose image…</string>
    <string name="selected_image">Selected image</string>
    <string name="save">Save</string>
</resources>
